Fixing missing base64 class in java 7